--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="facebook_app_id">2616599668662123</string>
     <string name="fb_login_protocol_scheme">fb2616599668662123</string>
     <string moduleConfig="true" name="CodePushDeploymentKey">TQyI3phUksM1Qb_mTB_Pj6_V671YgIdsRwVpj</string>
+    <string name="appCenterCrashes_whenToSendCrashes" moduleConfig="true" translatable="false">DO_NOT_ASK_JAVASCRIPT</string>
+    <string name="appCenterAnalytics_whenToEnableAnalytics" moduleConfig="true" translatable="false">ALWAYS_SEND</string>
 </resources>
